--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,11 @@
   {{title}}
 </h1>
 
+<p>Menu</p>
+<button type="button" shcButton icon="fa fa-list" label="MainMenu" (click)="menu.toggle($event)"></button>
+<shcMenu #menu popup="popup" [model]="items"></shcMenu>
+<hr />
+
 <p>Tool Tip</p>
 <input type="text" shcTooltip="Enter your username" tooltipPosition="top" tooltipEvent="focus">
 <hr />
@@ -34,3 +39,7 @@
     <button type="button" shcButton (click)="clearGr()" icon="fa-close" style="float:right" label="Clear"></button>
 </div>
 <shc-growl [value]="growl" [sticky]="false" position="top-center"></shc-growl>
+
+<div>
+    <router-outlet></router-outlet>
+</div>
